<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				xmlns:app="http://schemas.android.com/apk/res-auto"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				tools:context="com.benscholer.latinverbconjugator.Main">

	<include
		android:id="@+id/toolbar"
		layout="@layout/toolbar"/>

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@+id/toolbar">

		<com.rengwuxian.materialedittext.MaterialEditText
			android:layout_width="300sp"
			android:layout_height="wrap_content"
			android:id="@+id/first"
			android:hint="@string/first_part_hint"
			app:baseColor="#000000"
			app:primaryColor="@color/accent"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:text="cogito"/>

		<com.rengwuxian.materialedittext.MaterialEditText
			android:layout_width="300sp"
			android:layout_height="wrap_content"
			android:id="@+id/second"
			android:hint="@string/second_part_hint"
			app:baseColor="#000000"
			app:primaryColor="@color/accent"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/first"
			android:layout_marginTop="20dp"
			android:text="cogitare"/>

		<com.rengwuxian.materialedittext.MaterialEditText
			android:layout_width="300sp"
			android:layout_height="wrap_content"
			android:id="@+id/third"
			android:hint="@string/third_part_hint"
			app:baseColor="#000000"
			app:primaryColor="@color/accent"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/second"
			android:layout_marginTop="20dp"
			android:text="cogitavi"/>

		<com.rengwuxian.materialedittext.MaterialEditText
			android:layout_width="300sp"
			android:layout_height="wrap_content"
			android:id="@+id/fourth"
			android:hint="@string/fourth_part_hint"
			app:baseColor="#000000"
			app:primaryColor="@color/accent"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/third"
			android:layout_marginTop="20dp"
			android:text="cogitatum"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/conjugate_button"
			android:id="@+id/login_login_button"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="30dp"
			android:layout_below="@id/fourth"
			android:textColor="@color/primary_text"
			android:background="@drawable/button"
			android:theme="@style/Base.TextAppearance.AppCompat.Button"
			android:textAllCaps="true"
			android:onClick="conjugate"
			android:fontFamily="sans-serif-medium"/>

	</RelativeLayout>

</RelativeLayout>
